--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -30,7 +30,7 @@
                     <h3><span data-bind="text: prefilterPercent() + ' %', style: {color: prefilterShowWarning()? '#e25303' : ''}"></span> <span>{{ _('used') }}</span></h3>
                 </td>
                 <td class="maintenance-reset-column">
-                    <button class="btn maintenance-reset-btn"  data-bind="click: resetPrefilterUsage">{{ _('Reset') }}</button>
+                    <button class="btn maintenance-reset-btn" data-test="maintenance-reset-button-pre-filter" data-bind="click: resetPrefilterUsage">{{ _('Reset') }}</button>
                 </td>
             </tr>
             <tr>
@@ -57,7 +57,7 @@
                     <h3><span data-bind="text: carbonFilterPercent() + ' %', style: {color: carbonFilterShowWarning()? '#e25303' : ''}"></span> <span>{{ _('used') }}</span></h3>
                 </td>
                 <td class="maintenance-reset-column">
-                    <button class="btn maintenance-reset-btn" data-bind="click: resetCarbonFilterUsage">{{ _('Reset') }}</button>
+                    <button class="btn maintenance-reset-btn" data-test="maintenance-reset-button-carbon-filter" data-bind="click: resetCarbonFilterUsage">{{ _('Reset') }}</button>
                 </td>
             </tr>
             <tr>
@@ -90,7 +90,7 @@
                     <h3><span data-bind="text: laserHeadPercent() + ' %', style: {color: laserHeadShowWarning()? '#e25303' : ''}"></span> <span>{{ _('used') }}</span></h3>
                 </td>
                 <td class="maintenance-reset-column">
-                    <button class="btn maintenance-reset-btn" data-bind="click: resetLaserHeadUsage">{{ _('Reset') }}</button>
+                    <button class="btn maintenance-reset-btn" data-test="maintenance-reset-button-laser-head" data-bind="click: resetLaserHeadUsage">{{ _('Reset') }}</button>
                 </td>
             </tr>
             <tr data-bind="visible: needsGantryMaintenance()">
@@ -117,7 +117,7 @@
                     <h3><span data-bind="text: gantryPercent() + ' %', style: {color: gantryShowWarning()? '#e25303' : ''}"></span> <span>{{ _('used') }}</span></h3>
                 </td>
                 <td class="maintenance-reset-column">
-                    <button class="btn maintenance-reset-btn" data-test="maintenance-reset-button" data-bind="click: resetGantryUsage">{{ _('Reset') }}</button>
+                    <button class="btn maintenance-reset-btn" data-test="maintenance-reset-button-gantry" data-bind="click: resetGantryUsage">{{ _('Reset') }}</button>
                 </td>
             </tr>
         </table>
