--- a/octoprint_mrbeam/templates/software_channel_selector.jinja2
+++ b/octoprint_mrbeam/templates/software_channel_selector.jinja2
@@ -9,7 +9,7 @@
             <h5><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>{{ _('Stable Channel') }}: </h5>
             <p>{{ _('Use the most stable software for your Mr&nbsp;Beam. You will only get notified about officially released and well tested software updates.') }}</p>
             <p>{{ _('You can also download the latest STABLE software update via %(opening_tag)sthis link%(closing_tag)s and update your Mr&nbsp;Beam per USB stick.',
-                    opening_tag= '<a href="'+ mrbeamorg_downloads + '" target="_blank" style="white-space:nowrap;"><i class="icon-external-link"></i>&nbsp;',
+                    opening_tag= '<a href="'+ mrbeamorg_downloads + '" target="_blank" style="white-space:nowrap;" data-test="software-channel-stable-channel-link"><i class="icon-external-link"></i>&nbsp;',
                     closing_tag='</a>'
                     ) }}</p>
         </div>
@@ -18,7 +18,7 @@
             <p>{{ _('Get the latest Mr&nbsp;Beam development! In this channel you can try the newest features even before they are officially released, with more frequent updates. Use this if you are curious, you can always switch back to the stable channel if you experience errors.') }}</p>
             <p>
                 {{ _('Find out %(link_open)swhat\'s new in the beta channel.%(link_close)s',
-                    link_open='<a href="https://mr-beam.freshdesk.com/support/solutions/articles/43000507827" style="white-space:nowrap" target="_blank"><i class="icon-external-link" aria-hidden="true"></i>&nbsp;',
+                    link_open='<a href="https://mr-beam.freshdesk.com/support/solutions/articles/43000507827" data-test="software-channel-beta-channel-link" style="white-space:nowrap" target="_blank"><i class="icon-external-link" aria-hidden="true"></i>&nbsp;',
                     link_close='</a>'
                     ) }}
             </p>
