SW-1889 Add condition to avoid minor bug

--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -23,6 +23,7 @@
             </div>
             <div class="modal__modal-body--material-section" data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.name
             && window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.img
+            && window.mrbeam.viewModels.vectorConversionViewModel.selected_material_color()
             && window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness()?.thicknessMM">
                 <div class="row-fluid">
                     <div class="span6">
