SW-1931 lazy load design store (#1625)
* SW-1931 Add healthcheck_url to the material store model

* SW-1931 Add healthcheck_url to the settings service

* SW-1931 Remove info logging

* SW-1931 Add and modify unit tests

* SW-1931 Modify material store HEAD call to use the healthcheck API

* SW-1931 Fix a postMessage console error

* SW-1931 Load design store once and not on every title item click

* SW-1931 Initialize variable at the beginning of the method

* SW-1931 Modify design store template

* SW-1931 Add design store loading spinner styling

* SW-1931 Fix bug

* SW-1931 Move design store template into the tabs folder

* SW-1931 Lazy load the design store

* SW-1931 Modify design store initialization logic

This change will show the network issues page if the device is offline. However, this will not change if the device gets online until the user refreshes the page.

* SW-1931 Fix condition and add console error handling

The error is technically prompt by the window object of the Iframe, so better handle it based on that.

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3410,6 +3410,26 @@ button#terminal-send {
   margin-top: 45px;
 }
 
+#designstore .loading_spinner_wrapper {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+}
+#designstore .loading_spinner {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  color: #ffffff;
+}
+#designstore .loading_spinner i {
+  font-weight: bold;
+  font-size: 4em;
+}
+
 /* Design Store */
 
 /* Support Standalone */
