UPD: e2e maybe finally version

--- a/octoprint_mrbeam/templates/tab_designlib.jinja2
+++ b/octoprint_mrbeam/templates/tab_designlib.jinja2
@@ -114,7 +114,7 @@
 
 													<script type="text/html" id="files_template_machinecode_gcode" data-test="tab-designlib-mechinecode-file-id">
 														<div class="file_list_entry icon_card rounded_container" data-test="tab-designlib-mechinecode-file-card">
-															<div class="selection_box"  data-bind="click: function(data, ev){$root.updateSelection($data, ev)}" data-test="tab-designlib-mechinecode-file-select-box"><i class="icon icon-ok"></i></div>
+															<div class="selection_box" data-test="tab-designlib-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}" data-test="tab-designlib-mechinecode-file-select-box"><i class="icon icon-ok"></i></div>
 															<div class="preview" data-test="tab-designlib-mechinecode-file" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeGcode($data); $('#wa_tab_btn').tab('show'); } },
 																css: {disabled: $root.workingArea.isPlaced($data)}
@@ -140,8 +140,8 @@
 													</script>
 
 													<script type="text/html" id="files_template_model_svg" data-test="tab-designlib-files-svg">
-														<div class="file_list_entry preview_card rounded_container" data-test="tab-designlib-svg-preview-card" data-bind="attr: {mrb_name: name}">
-															<div class="selection_box" data-test="tab-designlib-svg-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok" data-test="tab-designlib-checked-file"></i></div>
+														<div class="file_list_entry preview_card rounded_container" data-test="tab-designlib-svg-preview-card" data-test="tab-designlib-preview-card" data-bind="attr: {mrb_name: name}">
+															<div class="selection_box" data-test="tab-designlib-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok" data-test="tab-designlib-checked-file"></i></div>
 															<div class="preview" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeSVG($data); $('#wa_tab_btn').tab('show'); } },
 																css: {disabled: $root.workingArea.isPlaced($data)}
@@ -173,7 +173,7 @@
 
 													<script type="text/html" id="files_template_recentjob_svg">
 														<div class="file_list_entry preview_card recentjob rounded_container" data-bind="attr: {mrb_name: name}">
-															<div class="selection_box"  data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok"></i></div>
+															<div class="selection_box" data-test="tab-designlib-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok"></i></div>
 															<div class="preview" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeSVG($data); $('#wa_tab_btn').tab('show'); } },
 																css: {disabled: $root.workingArea.isPlaced($data)}
@@ -205,8 +205,8 @@
 
 													<script type="text/html" id="files_template_model_dxf">
 														<div class="file_list_entry icon_card rounded_container">
-															<div class="selection_box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok"></i></div>
-															<div class="preview" data-test="tab-designlib-dxf-preview-card" data-bind="
+															<div class="selection_box" data-test="tab-designlib-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok"></i></div>
+															<div class="preview" data-test="tab-designlib-dxf-preview-card" data-test="tab-designlib-preview-card" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeDXF($data); $('#wa_tab_btn').tab('show'); } },
 																css: {disabled: $root.workingArea.isPlaced($data)}
 																" ><i class="icon-picture"></i></div>
@@ -231,8 +231,8 @@
 													</script>
 
 													<script type="text/html" id="files_template_model_image">
-														<div class="file_list_entry preview_card rounded_container" data-test="tab-designlib-image-preview-card" data-bind="attr: {mrb_name: name}">
-															<div class="selection_box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok" data-test="tab-designlib-checked-image"></i></div>
+														<div class="file_list_entry preview_card rounded_container" data-test="tab-designlib-image-preview-card" data-test="tab-designlib-preview-card" data-bind="attr: {mrb_name: name}">
+															<div class="selection_box" data-test="tab-designlib-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok" data-test="tab-designlib-checked-image"></i></div>
 															<div class="preview" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeIMG($data); $('#wa_tab_btn').tab('show'); } },
 																css: {disabled: $root.workingArea.isPlaced($data)}
