--- a/octoprint_mrbeam/templates/laser_job_done.jinja2
+++ b/octoprint_mrbeam/templates/laser_job_done.jinja2
@@ -22,7 +22,6 @@
                 </div>
             </div>
             <div class="modal__modal-body--material-section" data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.name
-            && window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.img
             && window.mrbeam.viewModels.vectorConversionViewModel.selected_material_color()
             && window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness()?.thicknessMM">
                 <div class="row-fluid">
@@ -31,9 +30,16 @@
                             <p>{{ _('By the way - Did you know?') }}</p>
                             {% for i in [1,2,3] %}
                             <div class="modal__material-details-box--{{ i }}">
+                                <!-- ko if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().img -->
                                 <div class="modal__material-picture"
                                      data-bind="style: { backgroundImage: 'url(\'' + window.mrbeam.viewModels.vectorConversionViewModel.selected_material().img + '\')' }">
                                 </div>
+                                <!-- /ko -->
+                                <!-- ko if: !window.mrbeam.viewModels.vectorConversionViewModel.selected_material().img -->
+                                <div class="modal__material-picture"
+                                     data-bind="style: { backgroundImage: 'url(\'' + '/plugin/mrbeam/static/img/materials/custommaterial.png' + '\')' }">
+                                </div>
+                                <!-- /ko -->
                                 <div class="modal__material-description">
                                     <div data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material_thickness().thicknessMM !== -1">
                                         <p data-bind="text: window.mrbeam.viewModels.vectorConversionViewModel.selected_material().name + ' , ' +
@@ -49,7 +55,7 @@
                     </div>
                     <div class="span6">
                         <div class="modal__material-link">
-                            <p data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.type === null"><span data-bind="text: gettext('You can find a variety of laser materials on our website.');"></span></p>
+                            <p data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.type === null || window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.type === undefined"><span data-bind="text: gettext('You can find a variety of laser materials on our website.');"></span></p>
                             <p data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.type === 'product'"><span data-bind="text: gettext('Our Material Store has the same material available for purchase.');"></span></p>
                             <p data-bind="if: window.mrbeam.viewModels.vectorConversionViewModel.selected_material()?.type === 'collection'"><span data-bind="text: gettext('We have similar materials for you in our Material Store.');"></span></p>
                             <div class="alert alert-error" data-bind="visible: !window.mrbeam.isOnline">
