- fix merge conflicts - run formatting

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2449,13 +2449,13 @@ input.search-query,
   user-select: none;
 }
 
-#quick_text_stroke_and_fill input[type=radio]{
+#quick_text_stroke_and_fill input[type="radio"] {
   margin: 8px 5px 0 0;
   transform: scale(1.2);
 }
 
-.mrb-quicktext-stroked-placeholder::-webkit-input-placeholder{
-    color: #ffffff;
+.mrb-quicktext-stroked-placeholder::-webkit-input-placeholder {
+  color: #ffffff;
 }
 
 .hidden {
@@ -2778,29 +2778,58 @@ hides the force update buttons
   color: #ffffff;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section p.modal__p--hashtag {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  p.modal__p--hashtag {
   font-weight: bold;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section div {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  div {
   position: absolute;
   bottom: 25px;
   right: 25px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section div a i {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  div
+  a
+  i {
   font-size: 2.4em;
   padding: 0 3px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section p.modal__p--hashtag a,
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section div a i {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  p.modal__p--hashtag
+  a,
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  div
+  a
+  i {
   color: #ffffff;
   text-decoration: none;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section p.modal__p--hashtag a:hover,
-.modal--laser-job-done .modal-body .modal__modal-body--social-media-section div a i:hover {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  p.modal__p--hashtag
+  a:hover,
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--social-media-section
+  div
+  a
+  i:hover {
   color: #e25303;
   text-decoration: none;
   background-color: #ffffff;
@@ -2811,60 +2840,106 @@ hides the force update buttons
   margin-bottom: 10px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details {
   font-weight: bold;
   position: relative;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details p {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  p {
   font-size: 16px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details > div {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  > div {
   border: 1px solid #333333;
   position: absolute;
   background: #ffffff;
   margin: 20px 0;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details div div {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  div
+  div {
   display: inline-block;
   vertical-align: middle;
   line-height: 1;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details div p {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  div
+  p {
   font-size: 14px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details .modal__material-description p {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  .modal__material-description
+  p {
   margin: 0 15px;
   width: 75px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details .modal__material-details-box--1 {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  .modal__material-details-box--1 {
   z-index: 3;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details .modal__material-details-box--2 {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  .modal__material-details-box--2 {
   top: 20px;
   left: 10px;
   z-index: 2;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details .modal__material-details-box--3 {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  .modal__material-details-box--3 {
   top: 10px;
   left: 20px;
   z-index: 1;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-details .modal__material-picture{
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-details
+  .modal__material-picture {
   height: 50px;
   width: 50px;
   background-size: cover;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-link a {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-link
+  a {
   border: 1px solid;
   width: 100%;
   display: block;
@@ -2873,7 +2948,11 @@ hides the force update buttons
   padding: 5px;
 }
 
-.modal--laser-job-done .modal-body .modal__modal-body--material-section .modal__material-link a:hover {
+.modal--laser-job-done
+  .modal-body
+  .modal__modal-body--material-section
+  .modal__material-link
+  a:hover {
   background-color: #e25303;
   color: #ffffff;
   text-decoration: none;
@@ -3542,7 +3621,7 @@ button#terminal-send {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-#hard_refresh_overlay .icon-warning-sign{
+#hard_refresh_overlay .icon-warning-sign {
   color: #e25303;
 }
 
@@ -3625,7 +3704,7 @@ button#terminal-send {
 .corner_calibration {
   max-width: 800px;
 }
-.corner_calibration .focus_reminder{
+.corner_calibration .focus_reminder {
   width: 250px;
 }
 
