--- a/octoprint_mrbeam/templates/tab/tab_materialstore.jinja2
+++ b/octoprint_mrbeam/templates/tab/tab_materialstore.jinja2
@@ -1,9 +1,11 @@
-
-<div class="tab-pane" id="designstore">
-    <iframe id="design_store_iframe" scrolling="auto" frameBorder="0"></iframe>
-    <div id="design_store_offline_placeholder">
-{#        Seems like you are not connected to the internet. If you want to use the Design Store, please connect to the internet and reload the page.#}
-
+<div class="tab-pane" id="material_store_content">
+    <div id="loading_spinner_wrapper">
+        <div id="loading_spinner">
+            <i class="icon icon-spinner icon-spin"></i>
+        </div>
+    </div>
+    <iframe id="material_store_iframe" class="hidden" loading="lazy" src="#"></iframe>
+    <div id="connection_error" class="hidden">
         <div class="row-fluid no-internet-connection-section">
             <div class="span12">
                 <div class="row-fluid">
@@ -18,11 +20,11 @@
                             </div>
                             <div class="span9">
                                 <div class="no-internet-content">
-                                    <h4>{{ _('The Mr&nbsp;Beam Design Store is not reachable') }}</h4>
+                                    <h4>{{ _('The Mr&nbsp;Beam Material Store is not reachable') }}</h4>
                                     <p>{{ _('In order to use our store it is necessary that your Mr&nbsp;Beam is connected to the internet.') }}</p>
                                     <p>{{ _('Please connect your Mr&nbsp;Beam to your router with a cable, or via WiFi.') }}</p>
                                     <div>
-                                        <button class="btn refresh-connection"  data-bind="click: $root.reloadDesignStoreIframe">
+                                        <button id="refresh_material_store_btn" class="btn refresh-connection">
                                             {{ _('Refresh') }}
                                         </button>
                                     </div>
@@ -36,6 +38,5 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
