--- a/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
+++ b/octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2
@@ -1,7 +1,7 @@
 <div class="corner_calibration">
 
     <div class="camera-calibration-title">
-        <button class="btn" data-bind="click: abortCornerCalibration">
+        <button class="btn" data-bind="click: abortCornerCalibration" data-test="view-corner-start-button-back">
             <img loading="lazy" src="plugin/mrbeam/static/img/back_arrow.svg" alt="">
         </button>
         <span>{{ _('Corner Calibration') }}</span>
@@ -42,7 +42,7 @@
         </li>
     </ol>
 
-    <svg id="calibration_svg" style="max-width: 80vh; border:1px solid lightgray" width="100%" height="100%"
+    <svg id="calibration_svg" data-test="view-corner-calibration-svg" style="max-width: 80vh; border:1px solid lightgray" width="100%" height="100%"
          viewBox="0 0 512 384" data-bind="attr: {viewBox: calSvgViewBox()}">
         <defs>
             <symbol id="cross">
