--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -48,7 +48,7 @@
 				<!-- Navbar -->
 				<ul id="mrbeam-main-tabs" class="nav nav-pills pull-right">
                     {# Translatots: Name of the tab #}
-					<li class="active"><a href="#workingarea" data-toggle="tab" id="wa_tab_btn">{{ _('working area') }}</a></li>
+					<li class="active"><a href="#workingarea" data-toggle="tab" id="wa_tab_btn" data-test="mrbeam-ui-index-working-area">{{ _('working area') }}</a></li>
                     {# Translatots: Name of the tab #}
 					<li><a href="#designlib" data-toggle="tab" id="designlib_tab_btn">{{ _('design library') }}</a></li>
                     <li><a href="#designstore" data-toggle="tab" id="designstore_tab_btn" onclick="window.mrbeam.viewModels.designStoreViewModel.initialiseStore()">{{ _('design store') }}</a></li>
@@ -79,35 +79,35 @@
                     <!-- ko allowBindings: false -->
                     {# Translators: Name of the tab #}
 					<li>
-						<a id="messages_nav_tab" href="#messages" data-toggle="tab" data-bind="css: { 'has-unread-messages': hasUnread }">
+						<a id="messages_nav_tab" data-test="mrbeam-ui-index-tab-message" href="#messages" data-toggle="tab" data-bind="css: { 'has-unread-messages': hasUnread }">
 							<i class="icon icon-envelope icon-large"></i>
 						</a>
 					</li>
 					<!-- /ko -->
 
 					<li id="burger_menu" class="dropdown mrb_menu">
-						<a href="#" id="burger_menu_link" class="dropdown-toggle" data-toggle="dropdown">
+						<a href="#" id="burger_menu_link" data-test="mrbeam-ui-index-menu-burger" class="dropdown-toggle" data-toggle="dropdown">
 							<i class="icon-reorder icon-large"></i>
 {#							<i class="icon-cog"></i>#}
 						  <b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#settings" data-toggle="tab" id="settings_tab_btn"><i class="icon-wrench"></i> {{ _('Settings') }}</a></li>
+							<li><a href="#settings" data-toggle="tab" id="settings_tab_btn" data-test="mrbeam-ui-index-tab-settings"><i class="icon-wrench"></i> {{ _('Settings') }}</a></li>
 							<li class="divider"></li>
-                            <li><a href="#" onclick="$('#lasersafety_overlay').modal('show')" id="lasersafety_menu_item"><i class="icon-warning-sign"></i> {{ _('Laser Safety') }}</a></li>
+                            <li><a href="#" onclick="$('#lasersafety_overlay').modal('show')" data-test="mrbeam-ui-index-tab-laser-safety" id="lasersafety_menu_item"><i class="icon-warning-sign"></i> {{ _('Laser Safety') }}</a></li>
 							<li class="divider fullscreen"></li>
                             <li class="fullscreen">
-                                <a href="#" id="go_fullscreen_menu_item"><i class="icon-fullscreen"></i> {{ _('Fullscreen') }}</a>
-                                <a href="#" id="exit_fullscreen_menu_item"><i class="icon-fullscreen"></i> {{ _('Exit Fullscreen') }}</a>
+                                <a href="#" id="go_fullscreen_menu_item" data-test="mrbeam-ui-index-tab-fullscreen-go"><i class="icon-fullscreen"></i> {{ _('Fullscreen') }}</a>
+                                <a href="#" id="exit_fullscreen_menu_item" data-test="mrbeam-ui-index-tab-fullscreen-exit"><i class="icon-fullscreen"></i> {{ _('Exit Fullscreen') }}</a>
                             </li>
 							<li class="divider"></li>
                             {% for document in burger_menu_model.documents %}
-                                <li><a href="{{ document.document_link.url }}" target="_blank"><i class="icon-book"></i>{{ document.title }}</a></li>
+                                <li><a href="{{ document.document_link.url }}" target="_blank" data-test="mrbeam-ui-index-tab-manual-user"><i class="icon-book"></i>{{ document.title }}</a></li>
                             {% endfor %}
 							<li class="divider"></li>
-							<li><a href="#" onclick="$('#support_overlay').modal('show')" id="support_menu_item"><i class="fa fa-life-ring"></i> {{ _('Support') }}</a></li>
+							<li><a href="#" onclick="$('#support_overlay').modal('show')" id="support_menu_item" data-test="mrbeam-ui-index-tab-support"><i class="fa fa-life-ring"></i> {{ _('Support') }}</a></li>
 							<li class="divider show_only_online"></li>
-							<li class="show_only_online"><a href="http://find.mr-beam.org" target="_blank"><i class="icon-chevron-right"></i> {{ _('Find my Mr Beam') }}</a></li>
+							<li class="show_only_online"><a href="http://find.mr-beam.org" target="_blank" data-test="mrbeam-ui-index-tab-laser-find-mr-beam"><i class="icon-chevron-right"></i> {{ _('Find my Mr Beam') }}</a></li>
                         </ul>
 					</li>
 				</ul>
