--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -1174,6 +1174,15 @@ body {
   padding-left: 15px;
   color: #e25303;
 }
+.octoprint-container .accordion-heading .laserhead-model-icon img {
+  height: 14px;
+  padding-bottom: 3px;
+}
+
+#dialog_vector_graphics_conversion .modal-header .laserhead-model-icon img {
+  height: 24px;
+  padding-bottom: 6px;
+}
 
 .octoprint-container .accordion-heading [class^="icon-"],
 .octoprint-container .accordion-heading [class*=" icon-"] {
