--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -57,8 +57,8 @@
                                 <li class='material_entry hover_shadow'
                                     data-bind="click: function(vm, event){$root.set_material($data, event); $root.moveJobsToEngravingDefaultOption($data)},
 												style: { backgroundImage: 'url(\'' + ($data.img || '/plugin/mrbeam/static/img/materials/custommaterial.png') + '\')' },
-												css: {selected: $root.selected_material() === $data, custom: $data.custom === true, compatible_material: $data.compatible === true, incompatible_material: $data.compatible === false },
-												attr: {mrb_name: $data.img, data_content: $data.customBeforeElementContent}
+												css: {selected: $root.selected_material() === $data, custom: $data.custom === true, compatible_material: $data.compatible === true, incompatible_material: $data.compatible === false, laserhead_x: $data.laser_model === 'x', laserhead_S: $data.laser_model === 'S'},
+												attr: {mrb_name: $data.img, data_content: $data.materialLaserModel}
 									">
                                     <span data-bind="text: $data.name"></span>
                                     <span class="delete_me"
