SW-1991 implement new laser head icon (#1642)
* adding icons for laserhead x

* fix SW-990 removal of css

* clip to long material names and show them in a tooltip

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -1174,6 +1174,10 @@ body {
   padding-left: 15px;
   color: #e25303;
 }
+.octoprint-container .accordion-heading .laserhead-model-icon img {
+  height: 14px;
+  padding-bottom: 3px;
+}
 
 .octoprint-container .accordion-heading [class^="icon-"],
 .octoprint-container .accordion-heading [class*=" icon-"] {
