--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -477,7 +477,7 @@ body.colorDragInProgress #drop_overlay {
   display: block;
 }
 
-li.material_entry span {
+li.material_entry .material_name {
   position: absolute;
   top: 0;
   background-color: rgba(255, 255, 255, 0.85);
@@ -486,6 +486,77 @@ li.material_entry span {
   left: 0;
   padding: 3px 8px;
   box-sizing: border-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+li.material_entry.custom.compatible_material .material_name,
+li.material_entry.custom.incompatible_material .material_name {
+  padding-right: 40px;
+}
+
+li.material_entry.custom.compatible_material::before,
+li.material_entry.custom.compatible_material::after {
+  z-index: 1;
+  position: absolute;
+  top: 3px;
+  font-weight: bold;
+  color: #e25303;
+  background: #ffffff;
+}
+
+li.material_entry.custom.compatible_material::before {
+  content: attr(data_content);
+  right: 19px;
+  font-size: 15px;
+  padding-right: 3px;
+}
+
+li.material_entry.custom.compatible_material.laserhead_x::before,
+li.material_entry.custom.incompatible_material.laserhead_x::before {
+  content: url("/plugin/mrbeam/static/img/laserhead_x.svg");
+  width: 20px;
+  top: 5px;
+}
+
+li.material_entry.custom.compatible_material.laserhead_S::before,
+li.material_entry.custom.incompatible_material.laserhead_S::before {
+  content: url("/plugin/mrbeam/static/img/laserhead_S.svg");
+  width: 20px;
+  top: 5px;
+}
+
+li.material_entry.custom.compatible_material::after {
+  content: "✓";
+  right: 4px;
+  font-size: 20px;
+}
+
+li.material_entry.custom.incompatible_material::before,
+li.material_entry.custom.incompatible_material::after {
+  z-index: 1;
+  position: absolute;
+  font-weight: bold;
+}
+
+li.material_entry.custom.incompatible_material::before {
+  content: attr(data_content);
+  right: 23px;
+  padding-right: 3px;
+  top: 3px;
+  font-size: 15px;
+  color: #e25303;
+  background: #ffffff;
+}
+
+li.material_entry.custom.incompatible_material::after {
+  content: "!";
+  right: 4px;
+  top: 4px;
+  background-color: #e25303;
+  border-radius: 50%;
+  color: #ffffff;
+  padding: 0 7px;
+  height: 17px;
 }
 
 #thickness_list {
@@ -555,6 +626,11 @@ li.material_entry span {
 }
 #safety_notes {
   font-weight: bold;
+}
+
+#safety_notes.incompatible_safety_warning {
+  color: #e25303;
+  white-space: pre-wrap;
 }
 
 #material_info p,
@@ -634,6 +710,21 @@ li.material_entry span {
 
 #dialog_vector_graphics_conversion .modal-body {
   /*min-height: 65vh;*/
+}
+
+#dialog_vector_graphics_conversion .modal-header h3 {
+  display: flex;
+}
+
+#dialog_vector_graphics_conversion .laserhead-model-icon {
+  color: #e25303;
+  font-size: 16px;
+  margin-left: 5px;
+}
+
+#dialog_vector_graphics_conversion .modal-header .laserhead-model-icon img {
+  height: 16px;
+  padding-bottom: 2px;
 }
 
 .modal.modal-left-side {
@@ -1179,4 +1270,9 @@ svg#area_preview.overModalBG {
   background: url(/plugin/mrbeam/static/img/calibration/calpic_wait.svg) center
     no-repeat;
   background-size: cover;
+}
+
+.material_tooltip {
+  width: 100%;
+  height: 20px;
 }
