--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -2,7 +2,9 @@
     <div class="modal-header">
         <h3 data-bind="visible:!slicing_in_progress()">{{ _('Material') }}
             <span data-bind="visible:customized_material()">{{ _('(customized)') }}</span>
-            {% if laserhead_model == 'S' %}<span class="laserhead-model-icon">[S]</span>{% endif %}</h3>
+            {% if laserhead_model == 'S' %}<span class="laserhead-model-icon"><img src="/plugin/mrbeam/static/img/laserhead_S.svg"></span>{% endif %}
+            {% if laserhead_model == 'x' %}<span class="laserhead-model-icon"><img src="/plugin/mrbeam/static/img/laserhead_x.svg"></span>{% endif %}
+        </h3>
         <h3 data-bind="visible:slicing_in_progress()">{{ _('Preparing...') }}</h3>
     </div>
     <div class="modal-body scrollable" style="box-sizing: border-box">
@@ -55,8 +57,8 @@
                                 <li class='material_entry hover_shadow'
                                     data-bind="click: function(vm, event){$root.set_material($data, event); $root.moveJobsToEngravingDefaultOption($data)},
 												style: { backgroundImage: 'url(\'' + ($data.img || '/plugin/mrbeam/static/img/materials/custommaterial.png') + '\')' },
-												css: {selected: $root.selected_material() === $data, custom: $data.custom === true, compatible_material: $data.compatible === true, incompatible_material: $data.compatible === false },
-												attr: {mrb_name: $data.img, data_content: $data.customBeforeElementContent}
+												css: {selected: $root.selected_material() === $data, custom: $data.custom === true, compatible_material: $data.compatible === true, incompatible_material: $data.compatible === false, laserhead_x: $data.laser_model === 'x', laserhead_S: $data.laser_model === 'S'},
+												attr: {mrb_name: $data.img, data_content: $data.materialLaserModel}
 									">
                                     <span data-bind="text: $data.name"></span>
                                     <span class="delete_me"
