--- a/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_ui_index.jinja2
@@ -50,8 +50,8 @@
                     {# Translatots: Name of the tab #}
 					<li class="active"><a href="#workingarea" data-toggle="tab" id="wa_tab_btn" data-test="mrbeam-ui-index-working-area">{{ _('working area') }}</a></li>
                     {# Translatots: Name of the tab #}
-					<li><a href="#designlib" data-toggle="tab" id="designlib_tab_btn">{{ _('design library') }}</a></li>
-                    <li><a href="#designstore" data-toggle="tab" id="designstore_tab_btn" onclick="window.mrbeam.viewModels.designStoreViewModel.initialiseStore()">{{ _('design store') }}</a></li>
+					<li><a href="#designlib" data-toggle="tab" id="designlib_tab_btn" data-test="mrbeam-ui-index-design-library">{{ _('design library') }}</a></li>
+                    <li><a href="#designstore" data-toggle="tab" id="designstore_tab_btn" onclick="window.mrbeam.viewModels.designStoreViewModel.initialiseStore()" data-test="mrbeam-ui-index-design-store">{{ _('design store') }}</a></li>
                     {% if settings_model.material_store.enabled %}
                         <li><a href="#material_store_content" data-toggle="tab" id="materialsotre_tab_btn" onclick="window.mrbeam.viewModels.materialStoreViewModel.initialiseStore('{{ settings_model.material_store.healthcheck_url }}', '{{ settings_model.material_store.url }}')">{{ _('material store') }}</a></li>
                     {% endif %}
