--- a/octoprint_mrbeam/templates/quick_text.jinja2
+++ b/octoprint_mrbeam/templates/quick_text.jinja2
@@ -18,7 +18,7 @@
                     <div class="control-group">
                         <label class="control-label" for="quick_text_stroke">{{ _('Line Color') }}</label>
                         <div class="controls">
-                            <input type="radio" value="stroke" id="quick_text_stroke" name="stroke_or_fill" data-bind="click: _qt_currentQuickTextUpdate()" />
+                            <input type="radio" value="stroke" id="quick_text_stroke" name="stroke_or_fill" data-test="quick-text-stroke-input" data-bind="click: _qt_currentQuickTextUpdate()" />
                             <div id="qt_colorPicker_stroke" class="tinyColorPicker">
                                 <a class="tcp_color"><div class="colorInner"></div></a>
                                 <div class="track"></div>
@@ -30,7 +30,7 @@
                     <div class="control-group">
                         <label class="control-label" for="quick_text_fill">{{ _('Fill Color') }}</label>
                         <div class="controls">
-                            <input type="radio" value="fill" id="quick_text_fill" name="stroke_or_fill" data-bind="click: _qt_currentQuickTextUpdate()" />
+                            <input type="radio" value="fill" id="quick_text_fill" name="stroke_or_fill" data-test="quick-text-color-picker-fill" data-bind="click: _qt_currentQuickTextUpdate()" />
                             <div id="qt_colorPicker_fill" class="tinyColorPicker blackWhite">
                                 <a class="tcp_color"><div class="colorInner"></div></a>
                                 <div class="track"></div>
