--- a/octoprint_mrbeam/templates/tab_designlib.jinja2
+++ b/octoprint_mrbeam/templates/tab_designlib.jinja2
@@ -172,7 +172,7 @@
 													</script>
 
 													<script type="text/html" id="files_template_recentjob_svg">
-														<div class="file_list_entry preview_card recentjob rounded_container" data-bind="attr: {mrb_name: name}">
+														<div class="file_list_entry preview_card recentjob rounded_container" data-bind="attr: {mrb_name: name}" data-test="tab-designlib-recentjob-file-card">
 															<div class="selection_box" data-test="tab-designlib-select-box" data-bind="click: function(data, ev){$root.updateSelection($data, ev)}"><i class="icon icon-ok"></i></div>
 															<div class="preview" data-bind="
 																click: function() { if(!$root.workingArea.isPlaced($data)){ $root.workingArea.placeSVG($data); $('#wa_tab_btn').tab('show'); } },
@@ -185,12 +185,12 @@
 															</div>
 															<div class="title dropdown dropup" >
 																<span class="title_shortened" data-bind="text: name, attr: {title: name}" ></span>
-																<a type="button" class="dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false">
+																<a type="button" class="dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false" data-test="tab-designlib-recentjob-file-icon-reorder">
 																	<i class="icon-reorder pull-right"></i>
 																</a>
 																<ul class="dropdown-menu dropdown-menu-right" role="menu">
 																	<li>
-																		<a class="" data-bind="attr: {href: $root.downloadLink($data), css: {disabled: !$root.downloadLink($data)}}"><i class="icon-download-alt" title="{{ _('Download') }}"></i> {{ _('Download') }}</a>
+																		<a class="" data-bind="attr: {href: $root.downloadLink($data), css: {disabled: !$root.downloadLink($data)}}" data-test="tab-designlib-recentjob-file-download"><i class="icon-download-alt" title="{{ _('Download') }}"></i> {{ _('Download') }}</a>
 																	</li>
 																	<li>
 																		<a class="" data-bind="click: function() { if ($root.enableRemove($data)) { $root.hideAndRemoveFile($data, event); } else { return; } }, css: {disabled: !$root.enableRemove($data)}"><i class="icon-trash" title="{{ _('Remove') }}"></i> {{ _('Remove') }}</a>
